dal Framework di base (Il motivo per cui in prima istanza ho prefirito la prima soluzione
mi sfugge completamente).


Ver 4.08 
Correzione allo stile della pagina di errore, sono stati modificati gli stili per rendere più leggibile
il messaggio di errore.


Ver 4.09
Aggiunta la macro 'double_select' in properties.ftl.
Modificata la macro 'commons' che produce il pannello delle properties comuni a tutte le card.
Modificata la macro 'codeMirror', aggiunto il controllo sulla visibilità del componente


Ver 4.1
Aggiunto il metodo getDomainCardIds() in WebAppAction per il recupero delle Card del dominio corrente.
Modificato il metodo createOrderBy() di HibernateSmartySearchEngine per la gestione della rimozione esplicita
dell'ordinamento direzione "none".
Modificato il comportamento dell'HibernateSmartySearchEngine ora è necessario che entrambi i valori di page e size siano
diversi da null, in caso contrario viene prodotto un risultato completo e non paginato.
Rimosso il tag PropertyDialog perchè non più usato.
Aggiunto il metodo warn in GAFService.
Aggiunta JSONAction per la gestione delle azioni che restituiscono risultati JSON in modo da restituire semplici stringhe in caso di errori (error_json.ftl).


Ver 4.2
Modificata completamente la gestione dei layout di posizionamento delle CARD 
    - Modiche alla struttura delle tabelle gaf_zones, gaf_cards
    - Eliminazione completa del supporto alla configurazione via file XML
    - Riorganizzazione di tutto il codice relativo al LayOutConfigLoader

Moodifica alla politica di gestione delle card non pubblicate, prima non venivano 
caricate nella pagina (se non si era collegati come configuratore/superAdmin) ora sono 
caricati ma viene presentata una pagina che visualizza un messaggio di lavori in corso.

Corretta l'internazionalizzazione dei sotto menu, aggiunta
<#assign label=tag.getText('menu.'+label?lower_case, label)/>
al main_menu.ftl per la definizione della label nel caso di assenza di
page action o url.
